--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             Джонатан Джостар - главный протагонист первой части JoJo's Bizarre Adventure, Phantom Blood, и первый ДжоДжо в серии. Его наследию практически целиком посвящены первые шесть частей серии, а главные персонажи являются его потомками, среди них Джозеф Джостар и Джотаро Куджо.
         </div>
         <div class="Joseph">
-            <img width="200px" height="250px"src="https://static.wikia.nocookie.net/anime-characters-fight/images/2/2d/JosephJoestar1234.png/revision/latest?cb=20181121184557&path-prefix=ru" alt="">
+            <img width="200px" height="250px"src="M1\project\JosephJoestar.webp" alt="">
             Следующим идёт-Джозеф Джостар - главный протагонист второй части JoJo's Bizarre Adventure и второй ДжоДжо в серии.Будучи внуком Джонатана Джостара, Джозеф имеет врождённые способности Хамона и впоследствии становится пользователем Стенда, способного делать спиритические фотографии, Hermit Purple.
         </div>
         <div class="Jotaro">
